# logia

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  README.md
cmake/: antlr4.cmake  gtest.cmake  llvm.cmake  sanitizer.cmake
intrinsics/: README.md  generate-floating-operators.js  generate-integer-operators.js  generate-pointer-operators.js  intrinsics.ll  operators.json
src/: LogiaLexer.g4  LogiaParser.g4  ast.cpp  ast.h  backend.cpp  backend.h  compiler.cpp  compiler.h  llvmvisitor.cpp  llvmvisitor.h  main.cpp  utils.cpp  utils.h
src/ast/: block.cpp  block.h  constexpr.cpp  constexpr.h  expr.cpp  expr.h  if_stmt.cpp  if_stmt.h  llvm.cpp  llvm.h  node.cpp  node.h  program.cpp  program.h  stmt.cpp  stmt.h  traverse.cpp  traverse.h  type.cpp  type.h  types.cpp  types.h
src/logia/: backend.cpp  cst2ast.cpp  cst2ast.h  frontend.cpp  frontend.h  help.cpp  help.h  run.cpp  run.h
test/: main.cpp  test_ast.cpp  test_logia.cpp  test_node.cpp  test_utils.cpp  test_utils.h
test/logia/: helloworld.logia  math.logia  struct-initializer.logia  sum.logia
